# backend/src/Types/units.ts
@@ -1,0 +1,8 @@
+type Unit = {
+  unit_id: number;
+  unit_name: string;
+  command_id: number;
+  command_name?: string;
+};
+
+export { Unit };
